@@ -1,3 +1,6 @@
+2012-01-05 Stephane Thiell  <stephane.thiell@cea.fr>
+	* Add mount_options per client option (ticket #116).
+
 2011-12-23 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Fix bad hash method for ModelFile (ticket #112).
 
